postgres/psql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: koyun
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: config
          mountPath: /etc/postgresql/config
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: secrets
          mountPath: /var/lib/postgresql
          readOnly: true
        - name: certs
          mountPath: /etc/postgresql/certs
          readOnly: true
        - name: tempfs
          mountPath: /etc/certs
        args:
        - -c
        - config_file=/etc/postgresql/config/postgresql.conf
        - -c
        - hba_file=/etc/postgresql/config/pg_hba.conf

      volumes:
      - name: config
        configMap:
          name: postgres-config
      - name: secrets
        secret:
          secretName: postgres-secret
      - name: certs
        secret:
          secretName: postgres-cert-secret
      - name: tempfs
        emptyDir: {}

  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 15Gi
      storageClassName: koyun-postgres-hostpath
