postgres/aks-statefulset.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: koyun
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
          - name: postgres-config
            mountPath: /etc/postgresql/config
          - name: postgres-secret
            mountPath: /etc/postgrescerts
          - name: tempfs
            mountPath: /etc/certs
        args:
        - -c
        - config_file=/etc/postgresql/config/postgresql.conf
        - -c
        - hba_file=/etc/postgresql/config/pg_hba.conf

      volumes:
        - name: postgres-config
          configMap:
            name: postgres-config
        - name: postgres-secret
          secret:
            secretName: postgres-secret
        - name: tempfs
          emptyDir: {}

  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: koyun-disk


---


apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: koyun
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
