postgres/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: koyun
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 32002
  selector:
    app: postgres
